--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -2,6 +2,8 @@
 name = "bind9-api-client"
 version = "0.1.0"
 authors = ["Valentin Brandl <vbrandl@riseup.net>"]
+description = "Client for the BIND9 API"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 clap = "2.32.0"
