--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -2,6 +2,7 @@
 name = "crypto"
 version = "0.1.0"
 authors = ["Valentin Brandl <vbrandl@riseup.net>"]
+license = "MIT/Apache-2.0"
 
 [dependencies]
 failure = "0.1.1"
