--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,6 +3,7 @@ name = "bind9-api"
 version = "0.1.0"
 authors = ["Valentin Brandl <vbrandl@riseup.net>"]
 description = "Web API to create, update and remove DNS entries in bind9"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 actix-web = "0.6.14"
