--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,7 @@ clap = "2.32.0"
 crypto = { path = "../crypto" }
 data = { path = "../data" }
 failure = "0.1.1"
+hyper = "0.11"
 log = "0.4.3"
 openssl-probe = "0.1.2"
 pretty_env_logger = "0.2.3"
