--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,14 +6,14 @@ description = "Web API to create, update and remove DNS entries in bind9"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-actix-web = "0.6.14"
-# actix-web = { git = "https://github.com/actix/actix-web.git" }
+actix-web = { version = "0.6.14", features=["alpn"] }
 clap = "2.31.2"
 crypto = { path = "../crypto" }
 data = { path = "../data" }
 failure = "0.1.1"
 futures = "0.1.21"
 log = "0.4.3"
+openssl = "0.10"
 pretty_env_logger = "0.2.3"
 serde = "1.0.69"
 serde_json = "1.0.22"
